--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,80 @@
-.navbar{
-display: flex;
-color: blue;
-}
+      *{
+      font-family: Montserrat;
+      font-weight: 600;}
+      a{
+      text-decoration: none;
+      color: #FBC70E;
+    }
+
+      .container{
+      max-width: 1440px;}
+
+      .navbar ul{
+      display: flex;
+      gap: 50px;
+      font-size: 14px;
+      list-style: none;
+      }
+ 
+
+      .head_text{
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      margin-left:40px;
+      padding: 0;}
+
+    .second_head_text{
+      display: flex;
+      justify-content: right;
+      align-items: center;
+      gap: 30px;
+      margin-right: 40px;
+      }
+
+      .head_nav{
+      background: #65256F;
+    display: flex;
+    justify-content: space-between;}
+      .head_nav p{
+      color:white;}
+
+      .nav{
+      top: 38px;
+      box-shadow: 0px 4px 4px 0px #00000040;}
+
+      .navbar{
+      flex: 3;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: row;
+       }
+
+
+      .nav_button button{
+      width: 168px;
+      height: 42px;
+      background-color: #65256F;
+      border: none;
+      font-size: 14px;
+      cursor: pointer;
+      color:white;
+      font-family: Montserrat;
+      border-radius: 3px;}
+
+      .co-items p{
+        margin:0px;
+      }
+      .co-items{
+      display: inline-block;
+    
+  }
+  .blocks{
+    margin: 0 auto;}
+    .items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:30px;}
+      
