--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,96 @@
-      *{
-      font-family: Montserrat;
-      font-weight: 600;}
-      a{
-      text-decoration: none;
-      color: #FBC70E;
-    }
+* {
+  font-family: Montserrat;
+  font-weight: 600;
+}
+a {
+  text-decoration: none;
+  color: #fbc70e;
+}
 
-      .container{
-      max-width: 1440px;}
+.container {
+  max-width: 1440px;
+}
 
-      .navbar ul{
-      display: flex;
-      gap: 50px;
-      font-size: 14px;
-      list-style: none;
-      }
- 
+.navbar ul {
+  display: flex;
+  gap: 50px;
+  font-size: 14px;
+  list-style: none;
+}
 
-      .head_text{
-      display: flex;
-      justify-content: left;
-      align-items: center;
-      margin-left:40px;
-      padding: 0;}
+.head_text {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin-left: 40px;
+  padding: 0;
+}
 
-    .second_head_text{
-      display: flex;
-      justify-content: right;
-      align-items: center;
-      gap: 30px;
-      margin-right: 40px;
-      }
+.second_head_text {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  gap: 30px;
+  margin-right: 40px;
+}
 
-      .head_nav{
-      background: #65256F;
-    display: flex;
-    justify-content: space-between;}
-      .head_nav p{
-      color:white;}
+.head_nav {
+  background: #65256f;
+  display: flex;
+  justify-content: space-between;
+}
+.head_nav p {
+  color: white;
+}
 
-      .nav{
-      top: 38px;
-      box-shadow: 0px 4px 4px 0px #00000040;}
+.nav {
+  top: 38px;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
 
-      .navbar{
-      flex: 3;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      flex-direction: row;
-       }
+.navbar {
+  flex: 3;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
 
+.nav_button button {
+  width: 168px;
+  height: 42px;
+  background-color: #65256f;
+  border: none;
+  font-size: 14px;
+  cursor: pointer;
+  color: white;
+  font-family: Montserrat;
+  border-radius: 3px;
+}
 
-      .nav_button button{
-      width: 168px;
-      height: 42px;
-      background-color: #65256F;
-      border: none;
-      font-size: 14px;
-      cursor: pointer;
-      color:white;
-      font-family: Montserrat;
-      border-radius: 3px;}
-
-      .co-items p{
-        margin:0px;
-      }
-      .co-items{
-      display: inline-block;
-    
-  }
-  .blocks{
-    text-align: center;
-    max-width: 280px;}
-    .items{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:40px;}
-    .blocks p{
-      font-family: Gilroy;
-      font-size: 20px;
-      font-weight: 400;
-      line-height: 23px;
-      letter-spacing: 0em;
-      }
-      .main_text h2{
-        font-family: Gilroy;}
-      
+.co-items p {
+  margin: 0px;
+}
+.co-items {
+  display: inline-block;
+}
+.blocks {
+  text-align: center;
+  max-width: 280px;
+}
+.items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.blocks p {
+  font-family: Gilroy;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+}
+.main_text h2 {
+  font-family: Gilroy;
+}
