--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,20 @@
     
   }
   .blocks{
-    margin: 0 auto;}
+    text-align: center;
+    max-width: 280px;}
     .items{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:30px;}
+    gap:40px;}
+    .blocks p{
+      font-family: Gilroy;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 23px;
+      letter-spacing: 0em;
+      }
+      .main_text h2{
+        font-family: Gilroy;}
       
